<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.FilterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emptyFavoriteImage"
        android:layout_width="402dp"
        android:layout_height="569dp"
        android:src="@drawable/food"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text_favourite"
        android:textSize="24sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/emptyFavoriteImage"
        app:layout_constraintStart_toStartOf="@id/emptyFavoriteImage"
        app:layout_constraintTop_toBottomOf="@id/emptyFavoriteImage" />

    <CheckBox
        android:id="@+id/checkBoxEuropean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/european_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/buttonApply"
        app:layout_constraintStart_toStartOf="@id/buttonApply"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBoxAsian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/asian_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEuropean"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEuropean" />

    <CheckBox
        android:id="@+id/checkBoxPanasian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/panasian_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAsian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAsian" />

    <CheckBox
        android:id="@+id/checkBoxEastern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/eastern_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPanasian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPanasian" />

    <CheckBox
        android:id="@+id/checkBoxAmerican"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/american_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEastern"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEastern" />

    <CheckBox
        android:id="@+id/checkBoxRussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/russian_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmerican"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmerican" />

    <CheckBox
        android:id="@+id/checkBoxMediterranean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mediterranean_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRussian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRussian" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:text="@string/button_apply_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMediterranean" />

</androidx.constraintlayout.widget.ConstraintLayout>